chage page flickering issue

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,12 +20,15 @@
 /deep/.mat-form-field-infix{
 	width: 185px ;
 }
-
+.page-view{
+	margin-right:0px;
+	margin-left:0px;
+}
 .inner-tourism {
 	width: 401px;
 	position: relative;
 	float: left;
-	margin: 0;
+	margin: 0px;
 }
 .outer-tourism{
 	width :100%;
@@ -101,7 +104,7 @@ span.toursim-txt {
 	/*text-shadow: 1px 1px 1px #000000;*/
 	/*font-size:16px;*/
 }
-.tour-des h1{
+.tour-des h1,p{
 	margin-top: 25px;
 	/*font-size: 21px;*/
 	text-align: center;
